--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.bg-blue-gradient {
+  background-image: linear-gradient(to top, #141E30, #141E30);
+}
